# study_CMake

./: .gitignore  README.md
examples/build-testHalcon12-Desktop_Qt_5_12_9_MSVC2017_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  rules.ninja  testHalcon12.cbp  testHalcon12.ilk
examples/build-testHalcon12-Desktop_Qt_5_12_9_MSVC2017_64bit-Debug/.cmake/api/v1/reply/: cache-v2-bf079ff271917f203e4c.json  cmakeFiles-v1-4cd6d11836b3edad4a91.json  codemodel-v2-1d2f8a31f517ddf96afc.json  index-2020-08-20T05-16-22-0194.json  target-testHalcon12-Debug-02e089d54cd65cb255c0.json
examples/build-testHalcon12-Desktop_Qt_5_12_9_MSVC2017_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  rules.ninja  testHalcon12.cbp
examples/build-testHalcon12-Desktop_Qt_5_12_9_MSVC2017_64bit-Release/.cmake/api/v1/reply/: cache-v2-fc704739982bdb828c60.json  cmakeFiles-v1-6c6accdbf7aa00175fc0.json  codemodel-v2-c5de5a278d03ffcf73c5.json  index-2020-08-20T05-17-13-0015.json  target-testHalcon12-Release-8de6ecea6439a99baa2d.json
examples/testHalcon12/: CMakeLists.txt
examples/testHalcon12/src/: main.cpp
